Finish fixing horizontal rule in email, now visible and editable in /admin, bg color-configurable and proper width in emails sent

--- a/public/less/email.less
+++ b/public/less/email.less
@@ -24,7 +24,7 @@
     }
 }
 .email-body .hr {
-    max-width: 100%;
+    max-width: 640px;
     border: 0;
     height: 0;
     margin: 0 auto;
